--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ main{
     text-decoration: none;
 }
 .container-right{
-  
+
     max-width: 60%;
     margin: 0px 1050px 0px 25px;
    
@@ -134,4 +134,56 @@ footer{
 footer>span a{
     font-weight: bold;
     color: #A9A9A9;
+}
+@media (max-width:950px){
+    main{
+        flex-wrap: wrap;
+    }
+    .container-left{
+        max-width: 100%;
+        margin: 25px 50px;
+   
+    }
+    .container-left h1{
+       font-size: 40px;
+       
+    
+    }
+    .container-left p{
+        font-weight: 400;
+        font-size: 20px;
+        
+    }
+    .container-left a{
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        padding:15px;
+        color: white;
+        text-decoration: none;
+    }
+    .container-right{
+       
+        max-width: 100vw;
+       
+        margin: 0px 1050px 0px 25px;
+           
+        
+   
+    }
+    .container-right_img img{
+        max-width: 475px;
+        height: 300px;
+    }
+    .container-right_down{
+    
+        padding: 15px;
+        margin-top: 250px;
+        margin-left: 15px;
+        margin-bottom: 10px;
+       
+    }
+    footer{
+        margin-top: 400px;
+    }
 }
