resolving problems from hamburguer menu

--- a/css/style.css
+++ b/css/style.css
@@ -18,29 +18,35 @@ font-family: 'Montserrat', sans-serif;
 body>header{
     margin: 25px;
 }
-body>header nav{
+body>header div nav{
     display: inline-block;
-    padding: 15px;
+   
 }
+
 .nav1{
     border: 1px solid white;
     font-family: 'Crimson Pro', serif;
     font-size: 14px;
     text-transform: uppercase;
-    margin-right: 620px;
+    margin-right: 625px;
     margin-left: 180px;
-
+    padding: 15px;
 }
 .nav2{
-    
+   
     text-decoration-line: underline;
     text-decoration-color: white;
     
 }
+
 .nav3{
+    
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     padding: 0px 75px;
+    display: inline-block;
+    text-decoration: none;
+ 
 }
 /* Main */
 main{
@@ -135,26 +141,15 @@ footer>span a{
     font-weight: bold;
     color: #A9A9A9;
 }
-/*
-  <div class="full-menu">  
-        <nav id="menu" class="menu">  
-             <ul>  
-                  <li class="home">Home</li>  
-                  <li class="about">About</li>  
-                  <li class="works">Works</li>  
-                  <li class="contact">Contact</li>  
-             </ul>  
-        </nav>  
-   </div>  
 
-*/
-@media (max-width:950px){
+@media (max-width:1500px){
     main{
         flex-wrap: wrap;
+       
     }
     .container-left{
         max-width: 100%;
-        margin: 25px 50px;
+        margin: 25px 50px 0px;
    
     }
     .container-left h1{
@@ -185,132 +180,189 @@ footer>span a{
    
     }
     .container-right_img img{
-        max-width: 475px;
-        height: 300px;
+        margin: 0px 25px 0px 100px;
+        max-width: 900px;
+        height: 600px;
     }
     .container-right_down{
     
         padding: 15px;
-        margin-top: 250px;
-        margin-left: 15px;
-        margin-bottom: 10px;
+        margin-top: 500px;
+        margin-left: 500px;
+        margin-bottom: 20px;
        
-    }
-    @keyframes zoom {  
-        0%, 100% {  
-             transform: scale(1);  
-       }  
-        50% {  
-             transform: scale(1.1);  
-       }  
-    }  
-    html, body {  
-        overflow: hidden;  
-        line-height: 1.5;  
-        font-family: 'Montserrat', 'Arial', sans-serif;  
-        color: #fff;  
-        text-align: center;  
-    }  
-      html, body, .full-menu, .content {  
-           width: 100%;  
-           height: 100%;  
-     } 
-    .full-menu {  
-        display: flex;  
-        align-items: center;  
-        justify-content: center;  
-    }  
-    /*.content {  
-       
-        background-size: cover;  
-         
-    }  */
-    .full-menu {  
-        position: absolute;  
-        background-color: #1e88e5;  
-        opacity: 0.5;  
-        transform: translateX(100%);  
-        transition: all 400ms ease-in;  
-    }  
-    .full-menu li {  
-        font-size: 4em;  
-        color: #fff;  
-        opacity: 0;  
-        transform: translateY(2%);  
-        transition: all 300ms ease-in;  
-        cursor: pointer;  
-    }  
-    .full-menu li:after {  
-        content: "";  
-        position: absolute;  
-        height: 5px;  
-        width: 0%;  
-        left: 0;  
-        bottom: 0;  
-        background-color: #fff;  
-        transition: width 200ms ease-in;  
-    }  
-    .full-menu li:hover:after {  
-        width: 100%;  
-    }  
-    .full-menu ul {  
-        list-style: none;  
-    }  
-    .full-menu.active {  
-        transform: translateX(0%);  
-        opacity: 1;  
-        z-index: 0;  
-    }  
-    .full-menu.active .home {  
-        transition-delay: 0.3s;  
-    }  
-    .full-menu.active .about {  
-        transition-delay: 0.4s;  
-    }  
-    .full-menu.active .works {  
-        transition-delay: 0.5s;  
-    }  
-    .full-menu.active .contact {  
-        transition-delay: 0.6s;  
-    }  
-    .full-menu.active li {  
-        opacity: 1;  
-        transform: translateX(0%);  
-    }  
-    .full-menu.active li:hover {  
-        animation: zoom 200ms ease-in;  
-    }  
-    .hamburguer {  
-        position: absolute;  
-        width: 2em;  
-        height: 2em;  
-        margin: 3em;  
-        z-index: 1;  
-        cursor: pointer;  
-    }  
-    .hamburguer:hover {  
-        animation: zoom 300ms ease-in;  
-    }  
-    .lines {  
-        background-color: #fff;  
-        width: 100%;  
-        height: 5px;  
-        margin: 5px 0;  
-        transition: all 450ms ease-in;  
-    }  
-    .close-hamburguer .lines {  
-        cursor: pointer;  
-    }  
-    .close-hamburguer .line-top {  
-        transform: translateY(200%) rotate(45deg);  
-    }  
-    .close-hamburguer .line-mid {  
-        opacity: 0;  
-    }  
-    .close-hamburguer .line-bottom {  
-        transform: translateY(-200%) rotate(135deg);  
     }
     footer{
         margin-top: 400px;
     }
-}
+    }
+    @media (max-width:1200px){
+        .container-right_img img{
+            max-width: 475px;
+            height: 300px;
+        }
+        .container-right_down{
+    
+            padding: 15px;
+            margin-top: 250px;
+            margin-left: 120px;
+            margin-bottom: 20px;
+           
+        }
+    }
+    /*
+  <div class="full-menu">  
+        <nav id="menu" class="menu">  
+             <ul>  
+                  <li class="home">Home</li>  
+                  <li class="about">About</li>  
+                  <li class="works">Works</li>  
+                  <li class="contact">Contact</li>  
+             </ul>  
+        </nav>  
+   </div>  
+*/
+    @media (max-width:650px){
+        .container-right{
+       
+            max-width: 100vw;
+           
+            margin: 0px 0px 0px 0px;
+               
+            
+       
+        }
+        .container-right_img img{
+           margin-left: 25px;
+            max-width: 435px;
+            height: 250px;
+        }
+        .container-right_down{
+    
+            padding: 15px;
+            margin-top: 200px;
+            margin-left: 20px;
+            margin-bottom: 20px;
+           
+        }
+        @keyframes zoom {  
+            0%, 100% {  
+                 transform: scale(1);  
+           }  
+            50% {  
+                 transform: scale(1.1);  
+           }  
+        }  
+        html, body {  
+            overflow: hidden;  
+            line-height: 1.5;  
+            font-family: 'Montserrat', 'Arial', sans-serif;  
+            color: #fff;  
+            text-align: center;  
+        }  
+          html, body, .full-menu, .content {  
+               width: 100%;  
+               height: 100%;  
+         } 
+       
+       
+        .full-menu {  
+            position: absolute;  
+            background-color: black;  
+            opacity: 0.5;  
+            transform: translateX(100%);  
+            transition: all 400ms ease-in;
+            display: list-item;
+            align-items: center;  
+            justify-content: center;   
+            
+        } 
+        
+        .full-menu nav {  
+            font-size: 4em;  
+            color: #fff;  
+            opacity: 0;  
+            transform: translateY(2%);  
+            transition: all 300ms ease-in;  
+            cursor: pointer;
+             
+        }  
+        .full-menu nav:after {  
+            content: "";  
+            position: absolute;  
+            height: 5px;  
+            width: 0%;  
+            left: 0;  
+            bottom: 0;  
+            background-color: #fff;  
+            transition: width 200ms ease-in;  
+        }  
+        .full-menu nav:hover:after {  
+            width: 100%;  
+        }  
+        .full-menu {  
+            list-style: none;  
+        }  
+        .full-menu.active {  
+            transform: translateX(0%);  
+            opacity: 1;  
+            z-index: 4;  
+        }
+        .full-menu.active .interior {  
+            transition-delay: 0.1s;  
+        }  
+        .full-menu.active .home {  
+            transition-delay: 0.3s;  
+        }  
+        .full-menu.active .collection {  
+            transition-delay: 0.4s;  
+        }  
+        .full-menu.active .about {  
+            transition-delay: 0.5s;  
+        }  
+        .full-menu.active .contact {  
+            transition-delay: 0.6s;  
+        }  
+        .full-menu.active nav {  
+            opacity: 1;  
+            transform: translateX(0%);  
+        }  
+        .full-menu.active nav:hover {  
+            animation: zoom 200ms ease-in;  
+        }  
+        .hamburguer {  
+            position: absolute;  
+            width: 2em;  
+            height: 2em;  
+             
+            z-index: 4;  
+            cursor: pointer;  
+        }  
+        .hamburguer:hover {  
+            animation: zoom 300ms ease-in;  
+        }  
+        .lines {  
+            background-color: #fff;  
+            width: 100%;  
+            height: 5px;  
+            margin: 5px 0;  
+            transition: all 450ms ease-in;  
+        }  
+        .close-hamburguer .lines {  
+            cursor: pointer;  
+        }  
+        .close-hamburguer .line-top {  
+            transform: translateY(200%) rotate(45deg);  
+        }  
+        .close-hamburguer .line-mid {  
+            opacity: 0;  
+        }  
+        .close-hamburguer .line-bottom {  
+            transform: translateY(-200%) rotate(135deg);  
+        }
+        
+  
+       
+        
+    }
+    
